fetch all of the comments from api by using postId

--- a/index.html
+++ b/index.html
@@ -12,17 +12,35 @@
     <div class="header">
         <h1 class="title">THIS IS A BLOGGING WEBSITE</h1>
         <p>This is a simple blog website using "Application Programming Interface" for lerning purpose.</p>
+        <div class="filter-container">
+            <input type="text" class="filter" id="filter" placeholder="search here...">  
+        </div>
     </div>
 
     <div class="container" id="container">
         
         <div class="card-deck">
-            <!-- <div class="single-card">   
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>          -->
+
         </div> 
+
+        <div class="single-post">
+
+        </div>
+
+        <div class="all-comments">
+            <div class="response">
+                <textarea name="text" type="text" id="self-response" placeholder="Your response..."></textarea>
+                <button>Submit</button>
+            </div>
+
+
+        </div>
+
+        <div class="loader">
+            <div class="circle"></div>
+            <div class="circvle"></div>
+            <div class="circle"></div>
+        </div>
 
     </div>
 
