--- a/single-post.html
+++ b/single-post.html
@@ -6,6 +6,7 @@
     <title>Blog</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 
@@ -14,15 +15,17 @@
         <h2 class="single-page-title">YOUR DESIRED POST</h2>
 
         <div class="single-post" id="single-post">
+            <!-- <i class="fa fa-arrow-circle-left"><a href="index.html"></a></i>
+            <h3 class="single-page-title"><strong>ggggggggggg gggggggggg</strong></h3><br>
+            <p class="single-page-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore perspiciatis eveniet cupiditate totam provident id impedit? Iusto quisquam laborum commodi, 
+                vero velit ipsum, aliquid earum nesciunt exercitationem at aliquam natus.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore perspiciatis eveniet cupiditate totam provident id impedit? Iusto quisquam laborum commodi, 
+                vero velit ipsum, aliquid earum nesciunt exercitationem at aliquam natus.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore perspiciatis eveniet cupiditate totam provident id impedit? Iusto quisquam laborum commodi, 
+                vero velit ipsum, aliquid earum nesciunt exercitationem at aliquam natus.
+            <p>
+            <button id="comments" onclick="Comments();">Comments</button> -->
         </div>
-        
-        <!-- <div class="card-deck">
-            <div class="single-card">   
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>         
-        </div>  -->
 
     </div>
 
